src/app/ports/styles/Ports.module.scss
@use "@/styles/vars" as vars;

.ports {
  display: flex;
  flex-direction: column;
  border-bottom: vars.$divider-width solid var(--bg2);
}

.item {
  display: flex;
  justify-content: center;

  padding: vars.$padding-small vars.$padding-edges;

  background-color: var(--bg0);

  @include vars.transition-main;

  &:nth-child(2n) {
    background-color: var(--bg1);
  }

  &:hover {
    background-color: var(--bg-green);
  }
}

.itemContent {
  display: flex;
  align-items: center;
  gap: vars.$padding-main;

  color: var(--fg);

  width: 100%;
  max-width: vars.$max-width-main;
}

.itemIcon {
  $clip-width: 10px;

  display: flex;
  align-items: center;
  justify-content: center;

  font-size: vars.$fsize-med;
  background-color: var(--bg-dim);
  padding: vars.$padding-main;

  clip-path: polygon(0 0, 100% 0, 100% calc(100% - $clip-width), calc(100% - $clip-width) 100%, 0 100%);
}

.itemText {
  display: flex;
  flex-direction: column;
  gap: vars.$padding-xsmall;
}

.itemAuthor {
  text-decoration: none;
  color: var(--grey1);

  &:visited {
    color: var(--grey1);
  }

  &:hover {
    text-decoration: underline;
  }
}

.itemTitle {
  font-weight: 600;
}

.openBtn {
  margin-left: auto;
  display: flex;
  align-items: center;
  gap: vars.$padding-main;
}

.noResults {
  flex: 1;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: vars.$padding-large;

  background-color: var(--bg0);
  border-bottom: vars.$divider-width solid var(--bg2);
}

.noResultsIcon {
  font-size: 128px;
  color: var(--bg4);
}

